<resources>

    <!-- Application -->
    <string name="app_name">Memory Layers</string>

    <!-- Activity -->

    <!-- activity_splash -->
    <string name="activity_splash_background_CD">Memory Layers</string>
    <!-- activity_login -->
    <string name="login_text">Log In</string>
    <string name="forgot_login_details">Forgot your login details?</string>
    <string name="login_with_facebook">Log In with Facebook</string>
    <string name="default_signup_text">Don\'t have an account?Sign up.</string>

    <!-- activity_signup -->
    <string name="register_signup">Sign up !</string>

    <!-- activity_reset_pass -->
    <string name="resetpass_title">Reset Your Password</string>
    <string name="resetpass_description">Enter your Email address and we will send to you an email to reset your password.</string>
    <string name="resetpass_btn_reset">Send Mail</string>


    <!-- 3rd Party Integration-->
    <string name="facebook_app_id">575828319253766</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
