<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_reset_pass"
    android:background="@drawable/transationlogin"
    tools:context=".view.activity.ResetPassActivity">

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/resetpass_title"
    android:text="@string/resetpass_title"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/colorwhite"
    android:layout_alignParentTop="true"
    android:textSize="@dimen/font_h5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/resetpass_description"
        android:id="@+id/resetpass_description"
        android:layout_below="@id/resetpass_title"
        android:textColor="@color/colorwhite"
        android:textSize="@dimen/font_p"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittxt_resetpass_email"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/resetpass_description"
        android:textColorHint="@color/colorwhite"
        android:hint="Email"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittxt_resetpass_email"
        android:id="@+id/btn_resetpass_reset"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/button_bg_transperant_with_border"
        android:textColor="@color/colorwhite"
        android:text="@string/resetpass_btn_reset"/>


</RelativeLayout>
