<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@drawable/transationlogin"
    android:id="@+id/activity_login_mainview"
    tools:context=".view.activity.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
       android:layout_alignParentTop="true"
        android:id="@+id/edittxt_username"
        android:textColorHint="@color/colorwhite"
        android:hint="Username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/edittxt_password"
        android:textColorHint="@color/colorwhite"
        android:layout_below="@id/edittxt_username"
        android:hint="Password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/button_bg_transperant_with_border"
        android:id="@+id/btn_login"
        android:textColor="@color/colorwhite"
        android:layout_below="@id/edittxt_password"
        android:text="@string/login_text"/>

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_below="@id/btn_login"
    android:id="@+id/btn_login_forgotlogindetails"
    android:text="@string/forgot_login_details"
    android:background="?android:attr/selectableItemBackground"
    android:textColor="@color/colorwhite"/>


    <!--  Divider -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:id="@+id/divider"
        android:layout_below="@id/btn_login_forgotlogindetails"
        >

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="OR"
            android:textColor="@color/colorPrimaryDark"  />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toLeftOf="@id/tvText"
            android:background="#fff"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@id/tvText"
            android:background="#fff"
            />

    </RelativeLayout>

    <!-- End Divider -->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorwhite"
        android:text="@string/login_with_facebook"
        android:id="@+id/btn_login_facebook"
        android:layout_below="@id/divider"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_signup_text"
        android:id="@+id/btn_login_signup"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorwhite"
        android:background="@drawable/button_bg_transperant_top_border"
        />
</RelativeLayout>